--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Polish</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -85,10 +86,23 @@
     
 
     <!--services section-->
-    <div id="contact" class="services">
-        <h1>contact</h1>
-
+    <footer id="contact" class="footer__container">
+  <div class="footer__content">
+    <h1 class="footer__title">Contact</h1>
+    <div class="footer__socials">
+      <a href="https://www.instagram.com/iulianb09/" target="_blank" class="footer__icon" aria-label="Instagram">
+        <i class="fab fa-instagram"></i>
+      </a>
+      <a href="https://www.linkedin.com/in/iulian-borsan-7a8ba3288/" target="_blank" class="footer__icon" aria-label="LinkedIn">
+        <i class="fab fa-linkedin"></i>
+      </a>
+      <a href="https://www.facebook.com/iulian.borsan.1/" target="_blank" class="footer__icon" aria-label="Facebook">
+        <i class="fab fa-facebook"></i>
+      </a>
     </div>
+    <p class="footer__copy">© 2025 Borsan Iulian. Toate drepturile rezervate.</p>
+  </div>
+</footer>
     <script src="java.js"></script>
 </body>
 </html>
