--- a/index.html
+++ b/index.html
@@ -82,6 +82,19 @@
     <img src="resources/skoda.JPEG" alt="deade" id="img-stanga">
     <img src="resources/skodaDone.JPEG" alt="deade" id="img-dreapta">
   </div>
+
+  <h1>Mercedes Sprinter </h1>
+  <div class="images">
+    <img src="resources/sprinter1.JPEG" alt="deade" id="img-stanga">
+    <img src="resources/sprinter1Done.JPEG" alt="deade" id="img-dreapta">
+  </div>
+
+  <h1>Mazda RX-8 </h1>
+  <div class="images">
+    <img src="resources/rx8.JPEG" alt="deade" id="img-stanga">
+    <img src="resources/rx8done.JPEG" alt="deade" id="img-dreapta">
+  </div>
+
 </div>
     
 
