--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar">
         <div class="navbar__container">
-        <a href="/" id="navbar__logo"> <img src="svg.svg" alt="sparkles" class="logo-icon">
+        <a href="/" id="navbar__logo"> <img src="resources/svg.svg" alt="sparkles" class="logo-icon">
             Polish</a>
         <div class="navbar__toggle" id="mobile-menu">
             <span class="bar"></span>
@@ -62,7 +62,7 @@
     <div class="galerie-sectiune">
   <h1>Audi A6 </h1>
   <div class="images">
-    <img src="resources/A6.jpeg" alt="deade" id="img-stanga">
+    <img src="resources/A6.JPEG" alt="deade" id="img-stanga">
     <img src="resources/a6Done.JPEG" alt="deade" id="img-dreapta">
   </div>
 
