--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div class="galerie-sectiune">
   <h1>Audi A6 </h1>
   <div class="images">
-    <img src="resources/A6.JPEG" alt="deade" id="img-stanga">
+    <img src="resources/A6poatemerge.JPEG" alt="deade" id="img-stanga">
     <img src="resources/a6Done.JPEG" alt="deade" id="img-dreapta">
   </div>
 
